--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity
             android:name=".ui.stats.UsesStatsActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat" />
+            android:theme="@style/AppTheme_Material" />
         <activity
             android:name=".ui.adduser.AppListActivity"
             android:exported="false"
