--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'realm-android'
 }
 
 android {
@@ -38,6 +40,10 @@ android {
     }
 }
 
+realm {
+    syncEnabled = true
+}
+
 dependencies {
     def work_version = "2.3.1"
     def coroutine_version = "1.7.0"
@@ -56,6 +62,8 @@ dependencies {
 
     implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
     implementation 'io.github.medyo:android-about-page:2.0.0'
+
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     // Import the BoM for the Firebase platform
     implementation(platform("com.google.firebase:firebase-bom:32.7.2"))
