--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ buildscript {
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0'
         classpath 'com.google.gms:google-services:4.3.2'
 
+        // add below dependency
+        classpath "io.realm:realm-gradle-plugin:10.3.1"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
